fix(fonts): bigger font size for better legibility

--- a/app/assets/main.css
+++ b/app/assets/main.css
@@ -49,7 +49,7 @@
 
 body {
   font-family: 'Manrope', serif;
-  font-size: 15px;
+  font-size: 16px;
   font-display: swap;
   line-height: 1.5;
 }
